spin_admin/tom-2-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nersc.gov/clustername: production
    nersc.gov/collab_uids: 70268,99896
    nersc.gov/gid: "95089"
    nersc.gov/gids: 45703,60152,57177,58102,59318,60070,63477,64483,79186,70268,74560,92576,94721,95089,96414,99650
    nersc.gov/roles: user
    nersc.gov/serveralias: svc
    nersc.gov/uid: "95089"
    nersc.gov/username: raknop
  generation: 1
  labels:
    cattle.io/creator: norman
  name: tom-app-2
  namespace: desc-tom-2
  resourceVersion: "439396394"
  selfLink: /apis/networking.k8s.io/v1/namespaces/desc-tom-2/ingresses/tom-app-2
  uid: 941f2977-3dac-44b5-9bce-38bf4f3d6380
spec:
  rules:
  - host: tom-app-2.desc-tom-2.production.svc.spin.nersc.org
    http:
      paths:
      - backend:
          service:
            name: tom-2-ingress-service
            port:
              number: 8080
        pathType: ImplementationSpecific
